feat(build): Use Java 21 for tests (#194)